form field overlapping issue with buttons

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -56,7 +56,7 @@ div.dropdown div.item:first-child {
   background-color: #eee;
 }
 
-.width-100 {
+.width-100, .w-full {
   width: 100%;
 }
 
